Revisión y corrección de los ejemplos

--- a/alertas.html
+++ b/alertas.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -27,7 +27,7 @@
 				<button class="close" data-dismiss="alert">
 					<span>&times;</span>
 				</button>
-				Texto de la alerta
+				Alerta con botón para cerrar.
 
 			</div>
 		</div>
