--- a/etiquetas.html
+++ b/etiquetas.html
@@ -1,32 +1,23 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
 	<meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Input groups</title>
+	<title>Etiquetas</title>
 	 <link href="theme/css/bootstrap.min.css" rel="stylesheet">
-
-	 <style type="text/css">
-	 	/*Utilice lo siguiente en el archivo
-	 	css para que el menú principal no tape
-	 	el contenido de la página*/
-	 	body {
-	 		padding-top: 80px;
-	 	}
-	 </style>
 
 </head>
 <body>
 
 <div class="container">
 	<br>
-	<h1>Header H1 <span class="label label-default">Nuevo</span></h1>
-	<h2>Header H1 <span class="label label-default">Nuevo</span></h2>
-	<h3>Header H1 <span class="label label-default">Nuevo</span></h3>
-	<h4>Header H1 <span class="label label-default">Nuevo</span></h4>
-	<h5>Header H1 <span class="label label-default">Nuevo</span></h5>
-	<h6>Header H1 <span class="label label-default">Nuevo</span></h6>
+	<h1>Header H1 <span class="label label-default">Default</span></h1>
+	<h2>Header H1 <span class="label label-primary">Primary</span></h2>
+	<h3>Header H1 <span class="label label-success">Success</span></h3>
+	<h4>Header H1 <span class="label label-danger">Danger</span></h4>
+	<h5>Header H1 <span class="label label-warning">Warning</span></h5>
+	<h6>Header H1 <span class="label label-info">Info</span></h6>
 
 	<p> 
 		Puedes jugar con las clases que ya conocemos
