--- a/iconos.html
+++ b/iconos.html
@@ -1,13 +1,16 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
-	<title>Iconos</title>
+	<meta charset="utf-8">
+	
+	<title>Íconos</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
     
 	<link rel="stylesheet" type="text/css" href="theme/css/bootstrap.min.css">
 </head>
 <body>
 <div class="container">
+	<h1>La clase glyphicon nos permite utilizar íconos de bootstrap en cualquier tamaño</h1>
 	<h1><span class="glyphicon glyphicon-asterisk"></span> Título 1</h1>
 	<h2><span class="glyphicon glyphicon-glyphicon glyphicon-home"></span>Título 2</h2>
 	<h3><span class="glyphicon glyphicon-glyphicon glyphicon-trash"></span>Título 3</h3>
@@ -16,6 +19,18 @@
 	<h6><span class="glyphicon glyphicon-glyphicon glyphicon-inbox"></span>Título 6</h6>
 	<p><span class="glyphicon glyphicon-glyphicon glyphicon-list-alt"></span>Para agregar los íconos póngalos dentro de un span en el lugar que se requiera. Bootstrap tiene íconos propios gracias a una librería glyphicon</p>
 	
+	<h2 class="text-default"><span class="glyphicon glyphicon-glyphicon glyphicon-home"></span>Los íconos son tratados como texto, por lo tanto, pueden asumir colores gracias a text-*</h2>
+
+	<p class="text-warning"><span class="glyphicon glyphicon-glyphicon glyphicon-asterisk"></span> Warning</p>
+
+	<p class="text-info"><span class="glyphicon glyphicon-glyphicon glyphicon-asterisk"></span> Info</p>
+
+	<p class="text-danger"><span class="glyphicon glyphicon-glyphicon glyphicon-asterisk"></span> Danger</p>
+
+	<p class="text-info"><span class="glyphicon glyphicon-glyphicon glyphicon-asterisk"></span> Error</p>
+
+	<p class="text-primary"><span class="glyphicon glyphicon-glyphicon glyphicon-asterisk"></span> Primary</p>
+
 </div>
 </body>
 </html>
