--- a/imagenes.html
+++ b/imagenes.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="es">
 <head>
 	<meta charset="utf-8">
+	 <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Imágenes</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<link href="theme/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="container">
 	<div class="row">
 		<div class="col-md-4">
-			<img src="http://lorempixel.com/300/300" class="img-responsive img-rounded">	
+			<img src="http://lorempixel.com/300/300" class="img-responsive img-rounded" title="img-rounded" >	
 		</div>
 		<div class="col-md-4">
-			<img src="http://lorempixel.com/300/300" class="img-responsive img-circle">	
+			<img src="http://lorempixel.com/300/300" class="img-responsive img-circle" title="img-circle">	
 		</div>
 		<div class="col-md-4">
-			<img src="http://lorempixel.com/300/300" class="img-responsive img-thumbnail">	
+			<img src="http://lorempixel.com/300/300" class="img-responsive img-thumbnail" title="img-thumbnail">	
 		</div>
 	</div>
 </div>
