--- a/formularios.html
+++ b/formularios.html
@@ -2,8 +2,9 @@
 <html lang="es">
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Formularios</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<link href="theme/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 	<div class="container">
@@ -29,10 +30,10 @@
 		</div>
 		<div class="form-group">
 			<label class="form-control" for="archivo">Archivo:</label>
-			<input type="file" name="archivo">
+			<input type="file" name="archivo" >
 			<p class="help-block">Máximo 50MB</p>
 		</div>
-		<button class="btn-primary">Enviar</button>
+		<button class="btn btn-primary">Enviar</button>
 	</form>
 
 	<form class="form-inline">
@@ -49,7 +50,7 @@
 			<div class="input-group-addon">@</div>
 			<input class="form-control" type="text" name="correo" id="correo" placeholder="Dominio:">
 		</div>
-		<button class="btn-primary">Enviar</button>
+		<button class="btn btn-primary">Enviar</button>
 	</form>
 
 	<form class="form-horizontal" action="">
