--- a/helper.html
+++ b/helper.html
@@ -2,14 +2,15 @@
 <html lang="es">
 <head>
 	<meta charset="utf-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Helper classes</title>
-	<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
+	<link href="theme/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
 <div class="container">
 	<div class="row">
 		<div class="col-md-12">
-			<h2>Título de prueba</h2>
+			<h2>Primer título</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 			tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 			quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -21,7 +22,8 @@
 
 				<button class="btn pull-right">Con pull right</button>
 			</div>
-			<a href="#" class="">Visitar artículo</a>
+			<p>Este texto se lo agregó luego de crear los botones, sin embargo, gracias a pull left/right, aparecerá entre ellos <a href="#" class="">Visitar artículo</a></p>
+			
 		</div>
 	</div>
 
