Se listan todos los ejemplos en el index. Se mejoran algunos ejemplos

--- a/alertas.html
+++ b/alertas.html
@@ -14,10 +14,11 @@
 	<br>
 	<div class="row">
 		<div class="col-md-4">
-			<div class="alert alert-success">Alerta</div>
-			<div class="alert alert-info">Alerta</div>
-			<div class="alert alert-warning">Alerta</div>
-			<div class="alert alert-danger">Alerta</div>
+			<div class="alert alert-success">Alerta success</div>
+			<div class="alert alert-info">Alerta info</div>
+			<div class="alert alert-warning">Alerta warning</div>
+			<div class="alert alert-danger">Alerta danger</div>
+			
 		</div>
 	</div>
 
