--- a/index.html
+++ b/index.html
@@ -6,14 +6,46 @@
 	<link rel= "stylesheet" type="text/css" href="theme/css/bootstrap.min.css" >
 </head>
 <body>
-<h1>Hola</h1>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
-consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
-cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
-proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-<button>Boton</button>
+<h1>Ejemplos de Bootstrap 4</h1>
+<p>En este proyecto encontraremos ejemplos sobre los elementos de bootstrap.</p>
+
+	<div class="row">
+		<div class="col-md-4">
+			<ul class="list-group">
+				<a href="template.html" class="list-group-item">Plantilla básica para bootstrap</a>
+				<a href="tipografia.html" class="list-group-item">Tipografías</a>
+				<a href="encabezados.html" class="list-group-item">Encabezados</a>
+				<a href="etiquetas.html" class="list-group-item">Etiquetas</a>
+				<a href="alertas.html" class="list-group-item">Alertas</a>
+				<a href="botones.html" class="list-group-item">Botones</a>
+				<a href="buttonGroup.html" class="list-group-item">Grupo de botones</a>
+				
+				<a href="dropdown.html" class="list-group-item">Drop down (combo box)</a>
+				<a href="formularios.html" class="list-group-item">Formularios</a>
+				<a href="helper.html" class="list-group-item">Helpers</a>
+				<a href="iconos.html" class="list-group-item">Íconos</a>
+				<a href="inputGroups.html" class="list-group-item">Input groups</a>
+				<a href="insignias.html" class="list-group-item">Insignias</a>
+				<a href="listGroup.html" class="list-group-item">Listas</a>
+				<a href="modals.html" class="list-group-item">Ventanas emergentes (Modals)</a>
+				<a href="navs.html" class="list-group-item">Pestañas (Navs)</a>
+				<a href="navBars.html" class="list-group-item">Menú (Navbars)</a>
+				<a href="breadcrumbs.html" class="list-group-item">Breadcrumbs</a>
+				<a href="paginacion.html" class="list-group-item">Paginación</a>
+				<a href="objectMedia.html" class="list-group-item">Object media</a>
+				<a href="panels.html" class="list-group-item">Panels</a>
+				<a href="progressbar.html" class="list-group-item">Barras de progreso</a>
+				<a href="rejillas.html" class="list-group-item">Rejillas</a>
+				<a href="tablas.html" class="list-group-item">Tablas</a>
+				
+				<a href="imagenes.html" class="list-group-item">Imágenes</a>
+				<a href="thumbnails.html" class="list-group-item">Miniaturas (Thumbnails)</a>
+
+			</ul>
+		</div>
+
+	</div>
+
 <script type="text/javascript" src="theme/js/jquery.js"></script>
 <script type="text/javascript" src="theme/js/bootstrap.min.js"></script>
 </body>
