--- a/template.html
+++ b/template.html
@@ -20,6 +20,13 @@
   <body>
     <h1>Hello, world!</h1>
 
+    <div class="bg-info center-block">
+        <h2>Plantilla de bootstrap</h2>
+        <p>Este es uno de los primeros ejemplos de bootstrap, se lo puede descargar del sitio oficial.</p>
+        <p>Este ejemplo permite saber si bootstrap está funcionando correctamente</p>
+        
+    </div>
+
     <div class="dropdown">
   <button class="btn btn-default dropdown-toggle" type="button" id="elMenu" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
     Dropdown
