--- a/tipografia.html
+++ b/tipografia.html
@@ -23,8 +23,8 @@
 <p><u>Etiqueta u, para subrayar un texto</u></p>
 <p><small>La etiqueta small</small></p>
 <p><strong>La etiqueta strong para negrita</strong></p>
-<p><b>La etiqueta b también es válida apra negrita en bootstrap</b></p>
-<p><em>Para cursiva, em es la etiqueta</em></p>
+<p><b>La etiqueta b también es válida para negrita en bootstrap</b></p>
+<p><em>Para cursiva, <em> es la etiqueta</em></p>
 
 
 <div class="main row">
@@ -44,7 +44,7 @@ consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div>
-<div class="col-md-3">Alineado a la derecha (text-right)
+<div class="col-md-3"><h3>Alineado a la derecha (text-right)</h3>
 <p class="text-right">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -52,7 +52,7 @@ consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
 cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
 proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 </div>
-<div class="col-md-3">Alineado a la justificado (text-justify)
+<div class="col-md-3"><h3>Alineado a la justificado (text-justify)</h3>
 <p class="text-justify">Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
@@ -86,7 +86,7 @@ proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
 <div class="row">
 	<div class="col-md-2"><p class="bg-primary"> bg-primary</p></div>
 	<div class="col-md-2"><p class="bg-success">bg-success</p></div>
-	<div class="col-md-2"><p class="bg-info"></p>bg-info</div>
+	<div class="col-md-2"><p class="bg-info">bg-info</p></div>
 	<div class="col-md-2"><p class="bg-warning">bg-warning</p></div>
 	<div class="col-md-2"><p class="bg-danger">bg-danger</p></div>
 	
