--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
+	<meta charset="utf-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Hola</title>
 	<link rel= "stylesheet" type="text/css" href="theme/css/bootstrap.min.css" >
@@ -40,6 +41,12 @@
 				
 				<a href="imagenes.html" class="list-group-item">Imágenes</a>
 				<a href="thumbnails.html" class="list-group-item">Miniaturas (Thumbnails)</a>
+
+				<a href="collapse.html" class="list-group-item"> Mostrar y ocultar paneles y Menús de acordeón (Collapse)</a>
+				<a href="scrollspy.html" class="list-group-item">Desplazamiento en la página (Anclas)</a>
+				<a href="tabsDynamic.html" class="list-group-item">Pestañas (Tabs dinámicos)</a>
+
+
 
 			</ul>
 		</div>
